# path-genie

./: .editorconfig  Cargo.toml  config.yaml
src/: lib.rs  main.rs  paths.rs  ui.rs  utils.rs
