[package]
name = "path-genie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
tui = { version = "0.16.0", features=["crossterm", "serde"] }
crossterm = "0.21.0"
serde = {version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
